force-app/main/default/objects/PAF_Quote__c/fields/Total_PAX__c.field-meta.xml
<CustomField>
    <fullName>Total_PAX__c</fullName>
    <formula>VALUE(TEXT(Adults__c))  +  VALUE(TEXT(Children__c))  +  VALUE(TEXT(Infants__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>