force-app/main/default/objects/PAF_Quote__c/fields/Transfers_Description__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Description__c</fullName>
    <label>Transfers Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>