force-app/main/default/objects/PAF_Quote__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sedan(1-2PPL)</fullName>
                <default>true</default>
                <label>Sedan(1-2PPL)</label>
            </value>
            <value>
                <fullName>Van(3-6PPL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>