force-app/main/default/objects/PAF_Quote__c/fields/WP_Link__c.field-meta.xml
<CustomField>
    <fullName>WP_Link__c</fullName>
    <label>WP Link</label>
    <type>Url</type>
</CustomField>