force-app/main/default/objects/PAF_Quote__c/fields/X3Hr_Lounge_Pass__c.field-meta.xml
<CustomField>
    <fullName>X3Hr_Lounge_Pass__c</fullName>
    <label>3Hr Lounge Pass($/PP)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>