force-app/main/default/objects/PAF_Quote__c/fields/X6Hr_Lounge_Pass__c.field-meta.xml
<CustomField>
    <fullName>X6Hr_Lounge_Pass__c</fullName>
    <label>6Hr Lounge Pass($/PP)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>