force-app/main/default/objects/PAF_Quote__c/fields/zzzInbound_Day_date_time__c.field-meta.xml
<CustomField>
    <fullName>zzzInbound_Day_date_time__c</fullName>
    <formula>MOD(  Return_Date__c  - DATE(1900, 1, 6), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzInbound Day date time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>