force-app/main/default/objects/PAF_Quote__c/fields/zzzOutbound_datetime__c.field-meta.xml
<CustomField>
    <fullName>zzzOutbound_datetime__c</fullName>
    <formula>MOD(  Departure_Date__c  - DATE(1900, 1, 6), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzOutbound datetime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>